--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="primary-button__icon-wrapper">
                     <img
                         class="user-menu__image"
-                        src="/images/phone-icon.svg"
+                        src="images/phone-icon.svg"
                         alt=""
                         width="18" height="18" loading="lazy"
                     >
@@ -54,7 +54,7 @@
                     <span class="primary-button__icon-wrapper">
                     <img
                         class="user-menu__image"
-                        src="/images/message-icon.svg"
+                        src="images/message-icon.svg"
                         alt=""
                         width="20" height="20" loading="lazy"
                     >
@@ -70,7 +70,7 @@
                     <span class="primary-button__icon-wrapper">
                     <img
                         class="user-menu__image"
-                        src="/images/user-icon.svg"
+                        src="images/user-icon.svg"
                         alt=""
                         width="20" height="18" loading="lazy"
                     >
@@ -214,7 +214,7 @@
                 </div>
                 <img
                     class="about__image"
-                    src="/images/about.jpg"
+                    src="images/about.jpg"
                     alt="CPS company"
                     width="320" height="176" loading="lazy"
                 >
