--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
             </li>
         </ul>
     </nav>
-    <section class="section">
+    <article class="section">
         <h2 class="visually-hidden">О нас</h2>
-        <div class="section__body">
+        <div class="article__body">
             <div class="about content__about">
                 <div class="about__text-block">
                     <div class="about__text">
@@ -220,7 +220,7 @@
                 >
             </div>
         </div>
-    </section>
+    </article>
 </main>
 </body>
 </html>
