--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>CPS</title>
 </head>
 <body>
-<header class="header">
-    <div class="header__inner">
+<header class="header header--hidden--desktop">
+    <div class="header__inner header__inner--box-shadow--bottom">
         <button
             type="button"
             class="primary-button burger-button"
