стилизовал кнопки навигации, исправил эффект при наведении на розовые кнопки

--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -33,28 +33,28 @@
     <nav class="sidebar-menu__sidebar-navigation sidebar-navigation">
         <ul class="sidebar-navigation__list">
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Ремонт техники</a>
+                <a href="#" class="sidebar-navigation__link sidebar-navigation__link--active">Ремонт техники</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Услуги и сервисы</a>
+                <a href="#" class="sidebar-navigation__link">Услуги и сервисы</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Корпоративным клиент</a>
+                <a href="#" class="sidebar-navigation__link">Корпоративным клиент</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Продавцам техники</a>
+                <a href="#" class="sidebar-navigation__link">Продавцам техники</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Партнерам</a>
+                <a href="#" class="sidebar-navigation__link">Партнерам</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Производителям</a>
+                <a href="#" class="sidebar-navigation__link">Производителям</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Наши сервисные центр</a>
+                <a href="#" class="sidebar-navigation__link">Наши сервисные центр</a>
             </li>
             <li class="sidebar-navigation__item">
-                <a href="" class="sidebar-navigation__link">Контакты</a>
+                <a href="#" class="sidebar-navigation__link">Контакты</a>
             </li>
         </ul>
     </nav>
