--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -58,7 +58,7 @@
             </li>
         </ul>
     </nav>
-    <footer class="sidebar-footer">
+    <footer class="sidebar-menu__sidebar-footer sidebar-footer">
         <div class="sidebar-footer__inner">
             <div class="sidebar-footer__user-menu user-menu">
                 <button class="user-menu__link primary-button primary-button--icon--phone">
@@ -75,23 +75,23 @@
                     </span>
                 </button>
             </div>
-            <a class="sidebar-footer__mail-link" href="mailto:mail@cps.com">mail@cps.com</a>
-            <a class="sidebar-footer__mail-phone" href="tel:88008908900">8 800 890 8900</a>
-            <div class="sidebar-footer__lang-block">
+            <a class="sidebar-footer__link sidebar-footer__link--size--small" href="mailto:mail@cps.com">mail@cps.com</a>
+            <a class="sidebar-footer__link sidebar-footer__link--size--large" href="tel:88008908900">8 800 890 8900</a>
+            <div class="sidebar-footer__lang-block lang-block">
                 <button
-                    class="lang-button lang-button--active"
+                    class="lang-block__button lang-block__button--active"
                     type="button"
                 >
                     RU
                 </button>
                 <button
-                    class="lang-button"
+                    class="lang-block__button"
                     type="button"
                 >
                     EN
                 </button>
                 <button
-                    class="lang-button"
+                    class="lang-block__button"
                     type="button"
                 >
                     CH
