сделал кнопку читать далее отдельным блоком

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         <h2 class="visually-hidden">О нас</h2>
         <div class="article__body">
             <div class="about content__about">
+
                 <div class="about__text-block">
+
                     <div class="about__text">
                         <p>Мы являемся авторизованным сервисным центром по ремонту техники
                             Dell. Только у нас вы можете
@@ -129,8 +131,9 @@
                         </p>
 
                     </div>
+
                     <button
-                        class="about__button"
+                        class="about__button read-more-button"
                         type="button"
                     >
                         Читать далее
