--- a/brand-slider.html
+++ b/brand-slider.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/brand-slider.css">
     <title>OPS 1.5</title>
 </head>
 <body>
@@ -126,7 +127,7 @@
                 </li>
             </ul>
             <button
-                class=""
+                class="read-more-button"
                 type="button"
             >
                 Показать все
