тилизовал блоки с брэндами

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </li>
         </ul>
     </nav>
-    <article class="section">
+    <article class="article">
         <h2 class="visually-hidden">О нас</h2>
         <div class="article__body">
             <div class="about content__about">
