--- a/brand-slider.html
+++ b/brand-slider.html
@@ -13,121 +13,121 @@
 <section class="section">
     <div class="section__inner">
         <div class="section__header">
-            <h2 class="section__title"></h2>
+            <h2 class="section__title">Ремонт техники различных брендов</h2>
         </div>
         <div class="section__body">
-            <ul class="brands-slider">
-                <li class="brands-slider__item">
+            <ul class="brands">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/lenovo.jpg"
                         alt="lenovo"
                         width="108" height="32" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/samsung.jpg"
                         alt="samsung"
                         width="116" height="39" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/apple.jpg"
                         alt="apple"
                         width="44" height="44" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/viewsonic.jpg"
                         alt="viewsonic"
                         width="128" height="21" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/hp.jpg"
                         alt="hp"
                         width="52" height="52" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/acer.jpg"
                         alt="acer"
                         width="94" height="24" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/sony.jpg"
                         alt="sony"
                         width="128" height="26" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/lenovo.jpg"
                         alt="lenovo"
                         width="108" height="32" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/samsung.jpg"
                         alt="samsung"
                         width="116" height="39" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/apple.jpg"
                         alt="apple"
                         width="44" height="44" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/viewsonic.jpg"
                         alt="viewsonic"
                         width="128" height="21" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
-                <li class="brands-slider__item">
+                <li class="brands__item">
                     <img
-                        class="brands-slider__image"
+                        class="brands__image"
                         src="images/brands/hp.jpg"
                         alt="hp"
                         width="52" height="52" loading="lazy"
                     >
-                    <a class="brands-slider__link" href="#"></a>
+                    <a class="brands__link secondary-button" href="#"></a>
                 </li>
             </ul>
             <button
-                class="read-more-button"
+                class="section__read-more-button read-more-button"
                 type="button"
             >
                 Показать все
