--- a/brand-slider.html
+++ b/brand-slider.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="swiper/swiper-bundle.min.css"/>
+<!--    <link rel="stylesheet" href="swiper/swiper-bundle.min.css"/>-->
     <link rel="stylesheet" href="css/brand-slider.css">
     <title>OPS 1.5</title>
 </head>
@@ -17,118 +17,92 @@
             <h2 class="section__title">Ремонт техники различных брендов</h2>
         </div>
         <div class="section__body">
-            <div>
-            <ul class="brands" id="brandsBlock">
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/lenovo.jpg"
-                        alt="lenovo"
-                        width="108" height="32" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/samsung.jpg"
-                        alt="samsung"
-                        width="116" height="39" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/apple.jpg"
-                        alt="apple"
-                        width="44" height="44" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/viewsonic.jpg"
-                        alt="viewsonic"
-                        width="128" height="21" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/hp.jpg"
-                        alt="hp"
-                        width="52" height="52" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/acer.jpg"
-                        alt="acer"
-                        width="94" height="24" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/sony.jpg"
-                        alt="sony"
-                        width="128" height="26" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/lenovo.jpg"
-                        alt="lenovo"
-                        width="108" height="32" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/samsung.jpg"
-                        alt="samsung"
-                        width="116" height="39" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/apple.jpg"
-                        alt="apple"
-                        width="44" height="44" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/viewsonic.jpg"
-                        alt="viewsonic"
-                        width="128" height="21" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-                <li class="brands__item">
-                    <img
-                        class="brands__image"
-                        src="images/brands/hp.jpg"
-                        alt="hp"
-                        width="52" height="52" loading="lazy"
-                    >
-                    <a class="brands__link secondary-button" href="#"></a>
-                </li>
-            </ul>
+            <div class="brands brands--margin--right">
+                <ul class="brands__list" id="brandsBlock">
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/lenovo.jpg"
+                            alt="lenovo"
+                            width="108" height="32" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/samsung.jpg"
+                            alt="samsung"
+                            width="116" height="39" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/apple.jpg"
+                            alt="apple"
+                            width="44" height="44" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/viewsonic.jpg"
+                            alt="viewsonic"
+                            width="128" height="21" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/hp.jpg"
+                            alt="hp"
+                            width="52" height="52" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/acer.jpg"
+                            alt="acer"
+                            width="94" height="24" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/sony.jpg"
+                            alt="sony"
+                            width="128" height="26" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/lenovo.jpg"
+                            alt="lenovo"
+                            width="108" height="32" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                    <li class="brands__item">
+                        <img
+                            class="brands__image"
+                            src="images/brands/samsung.jpg"
+                            alt="samsung"
+                            width="116" height="39" loading="lazy"
+                        >
+                        <a class="brands__link secondary-button" href="#"></a>
+                    </li>
+                </ul>
             </div>
+            <div class="pagination-slider"></div>
             <button
                 class="section__read-more-button read-more-button"
                 type="button"
